<resources>
    <string name="app_name">Worker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Добро пожаловать</string>
    <string name="second_fragment_label">Условия</string>
    <string name="next">Погнали</string>
    <string name="next_exam">Дальше</string>
    <string name="previous">Ознакомлен</string>
    <string name="confidet">Не является профессиональным тренером, перед тренировкой обязательно размяться</string>
    <string name="title_activity_one_work"></string>
    <string name="title_activity_two_work">hi</string>
    <string name="start">Начать</string>
    <string name="stop">Остановить</string>
    <string name="oneWork">Ходьба в планку с касанием плеч</string>
    <string name="twoWork">Широкий присед + освоение ноги в сторону</string>
    <string name="thriWork">Ходьба в планку с касанием плеч</string>
    <string name="fowrWork">Ходьба в планку с касанием плеч</string>

    <string name="hello_first_fragment">Настя тренировки</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="data_exampl">
        Для достижения цели используйте граффик тренероок снизу
    </string>

    <string-array name="dataTime_replase">
        <item>
             01.03.2023 - 8 повторов
        </item>
        <item>
            03.03.2023 - 8 повторов
        </item>
        <item>
             06.03.2023 - 10 повторов
        </item>
        <item>
            06.03.2023 - 10 повторов
        </item>
        <item>
            08.03.2023 - 10 повторов
        </item>
        <item>
            10.03.2023 - 12 повторов
        </item>
        <item>
            13.03.2023 - 12 повторов
        </item>
        <item>
            15.03.2023 - 14 повторов
        </item>
        <item>
            17.03.2023 - 14 повторов
        </item>
        <item>
            20.03.2023 - 16 повторов
        </item>
        <item>
            22.03.2023 - 16 повторов
        </item>
        <item>
            24.03.2023 - 18 повторов
        </item>
        <item>
            27.03.2023 - 18 повторов
        </item>
        <item>
            29.03.2023 - 18 повторов
        </item>
        <item>
             31.03.2023 - 18 повторов
        </item>
    </string-array>
</resources>