<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/OneWork"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OneWork">

    <TextView
        android:id="@+id/oneWorkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="205dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="206dp"
        android:text="@string/oneWork"
        android:textColor="#2196F3"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/oneWarkGif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="27dp"
        android:src="@drawable/fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bStart"
        android:layout_width="456dp"
        android:layout_height="109dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="54dp"
        android:text="@string/start"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oneWarkGif"
        app:layout_constraintVertical_bias="0.707" />

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="91dp"
        android:layout_height="43dp"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="92dp"
        android:background="#FFFFFF"
        android:text="00:00"
        android:textColor="#000000"
        android:textFontWeight="542"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="244dp"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>