<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TwoWork"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TwoWork">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="318dp"
        android:layout_height="221dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="33dp"
        android:src="@drawable/nogoj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="390dp"
        android:layout_height="20dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="123dp"
        android:text="@string/twoWork"
        android:textColor="#2196F3"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textLocale="center" />

    <Button
        android:id="@+id/bTwoStart"
        android:layout_width="390dp"
        android:layout_height="68dp"
        android:layout_marginStart="159dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="112dp"
        android:text="@string/start"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTwoTimer"
        android:layout_width="91dp"
        android:layout_height="43dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="88dp"
        android:background="#FFFFFF"
        android:text="00:00"
        android:textColor="#000000"
        android:textFontWeight="542"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bTwoStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bTwoStart"
        app:layout_constraintVertical_bias="0.4" />
</androidx.constraintlayout.widget.ConstraintLayout>